Fixed wrapping

--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
-    margin: 0px;
+    
+    margin: 0;
+    width: 100%;
+    height: 100%;
     background-color: darkgreen;
 }
 main{
@@ -110,6 +113,7 @@ nav{
     background-color: rgb(216, 215, 215);
     border-radius: 3px;
     align-items: center;
+    flex-wrap: wrap;
 }
 .about_content div{
     margin: 0.5rem;
@@ -128,6 +132,7 @@ nav{
     border-radius: 3px;
     align-items: center;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 #Skill{
     display: flex;
